--- a/css/style.css
+++ b/css/style.css
@@ -730,20 +730,17 @@ a.footer__text:hover,
 
 .burger {
   cursor: pointer;
-  margin-right: 20px;
-  border: 1px solid var(--white);
+  border: 1px solid var(--black);
   border-radius: 3px;
   padding: 8px;
   display: none;
-  max-width: 22px;
-  margin-top: 20px;
 }
 
 .burger-item {
   width: 22px;
   height: 2px;
   display: block;
-  background: var(--white);
+  background: var(--black);
   border-radius: 25px;
   margin-bottom: 5px;
   transition: all 0.5s;
@@ -771,12 +768,18 @@ a.footer__text:hover,
   transform: translateY(-7px) rotate(-45deg);
 }
 
-.nav.open {
+.logo-show-medium {
+  display: none;
+}
+
+.nav.medium {
   display: block;
 }
 
-.logo-show-medium {
-  display: none;
+.nav.medium .nav__list {
+  overflow: hidden;
+  max-height: 0;
+  padding: 0;
 }
 
 @media (max-width: 1270px) {
@@ -810,21 +813,36 @@ a.footer__text:hover,
     max-width: 720px;
   }
 
+  .content__nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
   .nav {
     display: none;
-    position: absolute;
-    width: 100%;
-    background: var(--black);
-    max-width: 205px;
-    right: 0;
-    left: auto;
-    top: auto;
-    margin-right: 20px;
+  }
+
+  .nav.medium.open {
+    display: block;
+    padding: 25px 0;
+  }
+
+  .nav.medium.open .nav__list {
+    height: 100%;
+    max-height: 800px;
+    transition: all .5s linear;
   }
 
   .nav__list {
     flex-direction: column;
     align-items: center;
+  }
+
+  .list__link {
+    color: var(--black);
   }
 
   .list__item {
@@ -836,8 +854,7 @@ a.footer__text:hover,
   }
 
   .burger {
-    display: block;
-    margin-left: auto;
+    display: inline-block;
   }
 
   .logo-show-medium {
