--- a/css/style.css
+++ b/css/style.css
@@ -1509,3 +1509,57 @@ a.footer__text:hover,
     max-width: 159px;
   }
 }
+
+.pain__text {
+  margin: 130px 0 120px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.pain__content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+  column-gap: 62px;
+  row-gap: 60px;
+}
+
+.pain__img {
+  max-width: 328px;
+  margin-bottom: 20px;
+}
+
+.pain__content--text {
+  font-size: 25px;
+  color: var(--black);
+}
+
+@media (max-width: 992px) {
+  .pain__text {
+    margin: 50px 0 50px;
+  }
+}
+
+@media (max-width: 768px) {
+  .pain__content {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 576px) {
+  .pain__text {
+    font-size: 18px;
+  }
+
+  .pain__content {
+    grid-template-columns: repeat(1, 1fr)
+  }
+
+  .pain__img {
+    max-width: 100%;
+  }
+
+  .pain__content--text {
+    font-size: 18px;
+  }
+}
